--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
-div {
+body{
+    margin:0;
+    text-align: center;
+}
+.hero {
     background-image: url("images/Abad.jpeg");
     height: 500px;
-    width: 100%;
+    width: 100;
     background-size: cover;
     border-radius: 20px;
 }
@@ -12,7 +16,7 @@ h1 {
     font-size: 50px;
     text-shadow: 2px 2px 4px #000000;
 }
-p {
+h2 {
     color: white;
     text-align: center;
     font-size: 20px;
