--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,18 @@ h2 {
     font-size: 20px;
     text-shadow: 1px 1px 2px #000000;
 }
+
+.item img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.activities {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    margin-top: 40px;
+}
+    
